--- a/src/app/css/style.css
+++ b/src/app/css/style.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html {
+  scrollbar-gutter: stable;
+}
 @layer base {
   html {
     @apply scroll-smooth;
